--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="card-footer">
-                <button class="btn btn-primary btn-sm">
+                <button class="btn btn-primary btn-sm" data-bs-toggle="collapse" data-bs-target="#music-list">
                     <i class="fa-solid fa-bars"></i>
                 </button>
                 <div class="volume-container">
@@ -51,9 +51,23 @@
                     <input type="range" id="volume-bar" class="form-range" max="100" value="100">
                 </div>
             </div>
+            <div id="music-list" class="collapse">
+                <ul class="list-group list-group-flush">
+                    <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <span> Boşver - Nilüfer</span>
+                        <span class="badge bg-primary rounded-pill">3:40</span>
+                    </li> -->
+                    
+                </ul>
+            </div>
+
+
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" 
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="music.js"></script>    
     <script src="musicplayer.js"></script>    
     <script src="app.js"></script>    
